search box restructuration to mobile first

--- a/index.html
+++ b/index.html
@@ -13,45 +13,122 @@
                     <img src="./img/mg-girl.jpg"/>
                 </section>
                 <section class="searchBox">
-                    <div>
-                        <label>Ordem de exibição</label>
+                    <div class="filters">
+                        <div class="filterName">
+                            <p>Ordem de exibição</p>
+                        </div>
                         <select name="select">
                             <option value="signUpDate" selected>data de cadastro</option>
                             <option value="followers">número de seguidores</option>
                             <option value="repositoryQuantity">número de repositórios</option>
                         </select>
                     </div>
-                    <div>
-                        <div>
-                            <p>Tipo de Perfil</p>
+                    <div class="filters">
+                        <div class="filterName">
+                            <p>Tipo de Perfil:</p>
                         </div>
-                        <div>
-                            <input type="checkbox" id="user" name="user" >
-                            <label>usuário</label>
+                        <div class="checkbox">
+                            <div>
+                                <input type="checkbox" id="user" name="user" >
+                            </div>
+                            <div>
+                                <label>usuário</label>
+                            </div>
                         </div>
-                        <div>
-                            <input type="checkbox" id="organization" name="orgnaization">
-                            <label>organização</label>
+                        <div class="checkbox">
+                            <div>
+                                <input type="checkbox" id="organization" name="orgnaization">
+                            </div>
+                            <div>
+                                <label>organização</label>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <input type="text" placeholder="Pesquisar...">
-                        <button type="button">Pesquisar</button>
+                    <div class="filters">
+                        <div class="filterName">
+                            <input type="text" placeholder="Pesquisar...">
+                        </div>
+                        <div>
+                            <button type="button">Pesquisar</button>
+                        </div>
                     </div>
                 </section>
             </header>
             <section class="contentBox">
-                <aside class="ottorBox">
-                    <section class="companyBox">
-                        <img />
-                    </section>
-                    <section class="ottorInfo">
+                <aside class="authorBox">
+                    <section class="companyInfo">
+                        <img src="./img/perfil.png"/>
                         <p>Ângelo Lanche</p>
                     </section>
+                    <section class="authorInfo">
+                        <img src="img/perfil.png" />
+                        <p>passage logo</p>
+                    </section>
                 </aside>
-                <article class="">
-                    
-                </article>
+                <div class="usersBox">
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>  
+                </div>
             </section>
         </main>
 
