contentBox and Aside restructuration to mobile first

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <main>
             <header class="header">
-                <section class="brandBox">
+                <div class="brandBox">
                     <img src="./img/mg-girl.jpg"/>
-                </section>
+                </div>
                 <section class="searchBox">
                     <div class="filters">
                         <div class="filterName">
@@ -55,80 +55,129 @@
                 </section>
             </header>
             <section class="contentBox">
+                <section class="resultsBox">
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais!</p>
+                        </div>
+                    </div>
+                    
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+
+                    <div class="userBox">
+                        <div>
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div>
+                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                        </div>
+                    </div>
+                </section>
                 <aside class="authorBox">
-                    <section class="companyInfo">
+                    <div class="companyInfo">
                         <img src="./img/perfil.png"/>
                         <p>Ângelo Lanche</p>
-                    </section>
-                    <section class="authorInfo">
+                    </div>
+                    <div class="companyInfo">
+                        <img src="./img/perfil.png"/>
+                        <p>Contato</p>
+                    </div>
+                    <div class="authorInfo">
                         <img src="img/perfil.png" />
-                        <p>passage logo</p>
-                    </section>
+                        <p>Pessage Logo</p>
+                    </div>
                 </aside>
-                <div class="usersBox">
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div>
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>  
-                </div>
             </section>
         </main>
 
