media query desktop adjusts

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="authorInfo">
                         <img src="img/perfil.png" />
-                        <p>Pessage Logo</p>
+                        <p>Pessege Logo</p>
                     </div>
                 </aside>
             </section>
