--- a/index.html
+++ b/index.html
@@ -14,43 +14,56 @@
         </header>
         <main class="mainBox">
             <section class="searchBox">
-                <div class="filter">
-                    <div class="searchBar">
-                        <div class="searchWriter">
-                            <input type="text" placeholder="Pesquisar...">
-                        </div>
-                        <div class="searchButton">
-                            <button type="button">Pes</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="filter">
-                    <select name="select">
-                        <option value="signUpDate" selected >Ordenar por...</option>
-                        <option value="signUpDate">data de cadastro</option>
-                        <option value="followers">número de seguidores</option>
-                        <option value="repositoryQuantity">número de repositórios</option>
-                    </select>
-                </div>
-                <div class="filter">
-                    <div class="filterName">
-                        <p>Tipo de Perfil:</p>
-                    </div>
-                    <div class="checkbox">
-                        <div>
-                            <input type="checkbox" id="user" name="user" >
-                        </div>
-                        <div>
-                            <label>usuário</label>
+                <div class="filterBox">
+                    <div class="filter">
+                        <div class="searchBar">
+                            <div class="searchWriter">
+                                <input type="text" placeholder="Pesquisar...">
+                            </div>
+                            <div class="searchIconBox">
+                                <span class="searchIcon">
+                                    <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                        <path 
+                                            d="M20.49 19l-5.73-5.73C15.53 12.2 16 10.91 16 9.5 16 5.91 13.09 3 
+                                            9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.41 0 2.7-.47 3.77-1.24L19 20.49 
+                                            20.49 19zM5 9.5C5 7.01 7.01 5 9.5 5S14 7.01 14 9.5 11.99 14 9.5 14 
+                                            5 11.99 5 9.5z">
+                                        </path>
+                                    </svg>
+                                </span>
+                            </div>
                         </div>
                     </div>
-                    <div class="checkbox">
-                        <div>
-                            <input type="checkbox" id="organization" name="orgnaization">
+                    <div class="filter">
+                        <button>
+                            Ordenar por...
+                        </button>
+                        <!-- <div class="orderBox">
+                            <button>Data de cadastro</button>
+                            <button>Número de seguidores</button>
+                            <button>Número de repositórios</button>
+                        </div> -->
+                    </div>
+                    <div class="filter">
+                        <button>
+                            tipo de perfil...
+                        </button>
+                        <!-- <div class="checkbox">
+                            <div>
+                                <input type="checkbox" id="user" name="user" >
+                            </div>
+                            <div>
+                                <label>user</label>
+                            </div>
                         </div>
-                        <div>
-                            <label>organização</label>
-                        </div>
+                        <div class="checkbox">
+                            <div>
+                                <input type="checkbox" id="organization" name="orgnaization">
+                            </div>
+                            <div>
+                                <label>organização</label>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -60,7 +73,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -69,7 +82,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -78,7 +91,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -87,7 +100,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -96,7 +109,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -105,7 +118,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -114,7 +127,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais!</p>
                         </div>
                     </div>
@@ -123,7 +136,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -132,7 +145,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -141,7 +154,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -150,7 +163,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
@@ -159,7 +172,7 @@
                         <div>
                             <img src="./img/perfil.png"/>
                         </div>
-                        <div>
+                        <div class="userTextBox">
                             <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                         </div>
                     </div>
