cards pre style - implemented

--- a/index.html
+++ b/index.html
@@ -67,133 +67,130 @@
                     </div>
                 </div>
             </section>
-            <section class="contentBox">
-                <section class="resultsBox">
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais!</p>
-                        </div>
-                    </div>
-                    
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-
-                    <div class="userBox">
-                        <div>
-                            <img src="./img/perfil.png"/>
-                        </div>
-                        <div class="userTextBox">
-                            <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
-                        </div>
-                    </div>
-                </section>
-                <aside class="authorBox">
-                    <div class="companyInfo">
+            <section class="resultsBox">
+                <div class="userBox">
+                    <div class="userImage">
                         <img src="./img/perfil.png"/>
-                        <p>Ângelo Lanche</p>
                     </div>
-                    <div class="companyInfo">
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
                         <img src="./img/perfil.png"/>
-                        <p>Contato</p>
                     </div>
-                    <div class="authorInfo">
-                        <img src="img/perfil.png" />
-                        <p>Pessege Logo</p>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                     </div>
-                </aside>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! bla blab lab bla bla bla bl bla bla bla esse usuário é top demais!</p>
+                    </div>
+                </div>
+                
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
+
+                <div class="userBox">
+                    <div class="userImage">
+                        <img src="./img/perfil.png"/>
+                    </div>
+                    <div class="userTextBox">
+                        <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
+                    </div>
+                </div>
             </section>
         </main>
-
+        <footer class="authorBox">
+            <div class="companyInfo">
+                <img src="./img/perfil.png"/>
+                <p>Ângelo Lanche</p>
+            </div>
+            <div class="companyInfo">
+                <img src="./img/perfil.png"/>
+                <p>Contato</p>
+            </div>
+            <div class="authorInfo">
+                <img src="img/perfil.png" />
+                <p>Pecege Logo</p>
+            </div>
+        </footer>
         <script>
         </script>
     </body>
