desktop css adjusts

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <p>Pecege Logo</p>
             </div>
         </footer>
-        <script>
+        <script src="./javascript.js">
         </script>
     </body>
 </html>
