--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
         </header>
         <main class="mainBox">
-            <section class="searchBox">
+            <section class="searchSection">
                 <div class="filterBox">
                     <div class="filter">
                         <div class="searchBar">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="filter">
-                        <button>
+                        <button class="filterButton">
                             Ordenar por...
                         </button>
                         <!-- <div class="orderBox">
@@ -45,7 +45,7 @@
                         </div> -->
                     </div>
                     <div class="filter">
-                        <button>
+                        <button class="filterButton">
                             tipo de perfil...
                         </button>
                         <!-- <div class="checkbox">
@@ -67,12 +67,17 @@
                     </div>
                 </div>
             </section>
-            <section class="resultsBox">
+            <section id='resultsBox' class="resultsBox">
                 <div class="userBox">
-                    <div class="userImage">
-                        <img src="./img/perfil.png"/>
+                    <div class="userInfos">
+                        <div class="userImage">
+                            <img src="./img/perfil.png"/>
+                        </div>
+                        <div class="userName">
+                            <p>user name</p>
+                        </div>
                     </div>
-                    <div class="userTextBox">
+                    <div class="userDescription">
                         <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                     </div>
                 </div>
@@ -191,7 +196,10 @@
                 <p>Pecege Logo</p>
             </div>
         </footer>
-        <script src="./javascript.js">
+
+        <script src="./api.js">
+        </script>
+        <script src="./page-functions.js">
         </script>
     </body>
 </html>
