user card - in progress

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </section>
             <section id='resultsBox' class="resultsBox">
-                <div class="userBox">
+                <!-- <div class="userBox">
                     <div class="userInfos">
                         <div class="userImage">
                             <img src="./img/perfil.png"/>
@@ -179,7 +179,7 @@
                     <div class="userTextBox">
                         <p>bla blab lab bla bla bla bl bla bla bla esse usuário é top demais! </p>
                     </div>
-                </div>
+                </div> -->
             </section>
         </main>
         <footer class="authorBox">
