--- a/index.html
+++ b/index.html
@@ -67,7 +67,41 @@
                     </div>
                 </div>
             </section>
-            <section id='resultsBox' class="resultsBox">
+            <section id='resultSection' class="resultSection">
+                <div class="userBox">
+                    <div class="userInfos">
+                        <div class="userImage">
+                            <img src="img/perfil.png"/>
+                        </div>
+                    </div>
+                    <div class="userInfos">
+                        <div class="userName">
+                            <p>Victor Ângelo Lanche</p>
+                        </div>
+                        <div class="">
+                            <p>Company</p>
+                            <p>1234</p>
+                            <p>1234</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="userBox">
+                    <div class="userInfos">
+                        <div class="userImage">
+                            <img src="${user.avatar_url}"/>
+                        </div>
+                    </div>
+                    <div class="userInfos">
+                        <div class="userName">
+                            <p>${user.name}</p>
+                        </div>
+                        <div class="">
+                            <p>${user.type}</p>
+                            <p>${user.followers}</p>
+                            <p>${user.public_repos}</p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="authorBox">
