html refac | api refac

--- a/index.html
+++ b/index.html
@@ -68,40 +68,33 @@
                 </div>
             </section>
             <section id='resultSection' class="resultSection">
-                <div class="userBox">
-                    <div class="userInfos">
+                <!-- <div class="userBox">
+                    <div class="userProfile">
                         <div class="userImage">
                             <img src="img/perfil.png"/>
                         </div>
-                    </div>
-                    <div class="userInfos">
-                        <div class="userName">
-                            <p>Victor Ângelo Lanche</p>
-                        </div>
-                        <div class="">
-                            <p>Company</p>
-                            <p>1234</p>
-                            <p>1234</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="userBox">
-                    <div class="userInfos">
-                        <div class="userImage">
-                            <img src="${user.avatar_url}"/>
-                        </div>
-                    </div>
-                    <div class="userInfos">
-                        <div class="userName">
-                            <p>${user.name}</p>
-                        </div>
-                        <div class="">
-                            <p>${user.type}</p>
-                            <p>${user.followers}</p>
-                            <p>${user.public_repos}</p>
+                        <div class="userBasicInfos">
+                            <div class="userLogin">
+                                <p>Victor Ângelo Lanche</p>
+                            </div>
+                            <div class="userDetails">
+                                <div class="">
+                                    <span></span><p>1234 followers</p>
+                                    <span></span><p>1234 followers</p>
+                                    <span></span><p>1234 followers</p>
+                                    <span></span><p>1234 followers</p>
+                                    <span></span><p>1234 followers</p>
+                                </div>
+                                <div class="description">
+                                    <p>bla bla bla bla esse é um super usuário legal</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div>
+                        <span class="arrow">&#748</span>
+                    </div>
+                </div> -->
             </section>
         </main>
         <footer class="authorBox">
