--- a/modal.html
+++ b/modal.html
@@ -1,14 +1,12 @@
 function userDatailsModal {
-    <div class="userDetailsModal">
-        <div class=principaisInfos>
-            <div>
+    <div class="userModal">
+        <div class="userModalInfos">
+            <div class="userID">
                 <div>
-                    <div>
-                        <h1>Nome ocmpleto</h1>
-                    </div>
-                    <div>
-                        <h3>login</h3>
-                    </div>
+                    <h1>Nome ocmpleto</h1>
+                </div>
+                <div>
+                    <h3>login</h3>
                 </div>
             </div>
             <div>
