--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="filter">
                         <div class="searchBar">
                             <div class="searchWriter">
-                                <input type="text" placeholder="Pesquisar...">
+                                <input id="filter" type="text" placeholder="Pesquisar...">
                             </div>
                             <div class="searchIconBox">
                                 <span class="searchIcon">
